<resources>
    <string name="app_name">MangoPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_bong_player_explorer">MangoPlayer</string>
    <string name="title_activity_media_detail">MediaDetailActivity</string>
    <string name="title_activity_video_view_demo">VideoViewDemo</string>
    <string name="vitamio_name">Vitamio</string>
    <string name="vitamio_init_decoders">Initializing decoders…</string>
    <string name="vitamio_videoview_error_title">Cannot play video</string>
    <string name="vitamio_videoview_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="vitamio_videoview_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="vitamio_videoview_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="video_layout_loading">Loading…</string>
    <string name="title_activity_video">VideoActivity</string>
	<string name="tab_video">Video</string>
    <string name="tab_audio">Audio</string>
    <string name="tab_text">Text</string>
    <string name="tab_video_quality">Quality</string>
    <string name="tab_video_aspect_ratio">Aspect ratio</string>
    <string name="tab_video_orientation">Orientation</string>
    <string name="tab_video_hw_decoder">HW decoder</string>
    <string name="tab_video_deinterlace">Deinterlace</string>
    <string name="tab_video_background">Background playback</string>
    <string name="tab_video_buffer_size">Buffer size</string>
    <string name="tab_audio_stereo">Stereo</string>
    <string name="tab_audio_left">L</string>
    <string name="tab_audio_right">R</string>
    <string name="tab_audio_tracks">Tracks</string>
    <string name="tab_text_subtitle">Subtitle</string>
    <string name="tab_text_subtitle_tracks">Tracks</string>
    <string name="tab_text_subtitle_tracks_nothing">No tracks</string>
    <string name="tab_text_font">Font</string>
    <string name="tab_text_encoding">Encoding</string>
    <string name="tab_text_style">Style</string>
    <string name="tab_text_size">Size</string>
    <string name="tab_text_position">Position</string>
    <string name="tab_text_border">Border</string>
    <string name="tab_text_border_size">Size</string>
    <string name="pref_cat_player">플레이어 설정</string>
    <string name="pref_cat_player_sum">화면크기, 이어보기 등</string>
    <string name="pref_tit_play_continu">이어 보기</string>
    <string name="pref_sum_play_continu">마지막 종료시점 부터 재생</string>
    <string name="pref_tit_video_size">화면 크기</string>
    <string name="pref_sum_video_size">화면 크기 설정</string>
    <string name="pref_tit_micro_seek_duration">탐색 간격</string>
    <string name="pref_sum_micro_seek_duration">탐색 간격을 초단위로 설정</string>
    <string name="pref_tit_decoder_choice">디코더 우선순위</string>
    <string name="pref_sum_decoder_choice">H/W, S/W 디코더 선택</string>
    <string name="pref_tit_screen_ratio">화면 비율</string>
    <string name="pref_sum_screen_ratio">화면의 가로, 세로 비율 설정</string>
    <string name="pref_tit_brightness">화면 밝기</string>
    <string name="pref_sum_brightness">화면의 발기를 설정</string>
    <string name="pref_tit_play_next">다음파일 재생</string>
    <string name="pref_sum_play_next">재생 완료 후 다음 파일 존재 시 재생</string>
    <string name="pref_cat_subtitle">자막 설정</string>
    <string name="pref_cat_subtitle_sum">크기, 색상, 글꼴, 인코딩 등</string>
    <string name="pref_tit_sub_font">자막 글꼴</string>
    <string name="pref_sum_sub_font">자막 글꼴 설정</string>
    <string name="pref_tit_sub_size">자막 크기</string>
    <string name="pref_sum_sub_size">자막의 크기를 설정</string>
    <string name="pref_tit_sub_color">자막 색상</string>
    <string name="pref_sum_sub_color">자막의 색상을 설정</string>
    <string name="pref_tit_sub_shown">자막 보이기</string>
    <string name="pref_sum_sub_shown">자막 보임, 숨김 설정</string>
    <string name="pref_tit_sub_encoding">자막 인코딩</string>
    <string name="pref_sum_sub_encoding">자막 인코딩 설정</string>
	<string name="pref_tit_sub_position">자막 위치</string>
    <string name="pref_sum_sub_position">자막의 위치를 조정</string>
    <string name="pref_tit_sub_time">자막 시간 조정 간격</string>
    <string name="pref_sum_sub_time">자막의 나오는 시간을 조정</string>
  	<string name="menu_wifi">Wifi</string>
    <string name="menu_search">Search</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_open_url">Open URL</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_preferences">설정</string>
    <string name="menu_quit">Quit</string>
    <string name="file_explorer_no_data">No files</string>
    <string name="file_explorer_select_all">전체선택</string>
    <string name="file_explorer_cannot_read">읽을 수 없는 파일입니다</string>
    <string name="file_explorer_not_exists">파일이 존재하지 않습니다</string>
    <string name="file_meta_delete">삭제</string>
    <string name="file_meta_hidden">Hide</string>
    <string name="file_explorer_videos">%d 비디오</string>
    <string name="file_explorer_file_icon">File icon</string>
    <string name="file_explorer_play_all">Play all</string>
    <string name="file_explorer_help">Help</string>
    <string name="file_explorer_play">Play</string>
    <string name="file_explorer_play_from_start">Replay</string>
    <string name="file_explorer_loop_file">Loop</string>
    <string name="file_explorer_hw_decoder">하드웨어 디코더 재생</string>
    <string name="file_explorer_sw_decoder">소프트웨어 디코더 재생</string>
    <string name="file_meta_rename">Rename</string>
    <string name="file_meta_details">비디오 상세보기</string>
    <string name="file_meta_modify">Modify</string>
    <string name="permission_receive_messages_label">Receive Vitamio messages</string>
    <string name="permission_write_providers_label">Write Vitamio providers</string>
    <string name="permission_group_tools_label">Vitamio tools</string>
    <string name="permission_group_tools_description">Access Vitamio package and resources.</string>
    <string name="permission_receive_messages_description">Receive all broadcasts from Vitamio service.</string>
    <string name="permission_write_providers_description">Delete, update or create new items in Vitamio providers.</string>
    <string name="action_plug">Plugins</string>
    <string name="action_preferences">설정</string>
    <string name="action_quit">종료</string>
    <string name="action_add_group">Add Group</string>
    <string name="cropimage_waiting">Please wait…</string>
    <string name="cropimage_wallpaper_is_setting">Applying wallpaper…</string>
    <string name="cropimage_wallpaper_success">Wallpaper changed!</string>
    <string name="cropimage_wallpaper_failed">Set wallpaper failed!</string>
    <string name="cropimage_image_saving">Saving image</string>
    <string name="cropimage_face_multiple">Multi face crop help</string>
    <string name="cropimage_image_save">Save</string>
    <string name="cropimage_image_discard">Discard</string>
    <string name="cropimage_image_rotate_left">Rotate Left</string>
    <string name="cropimage_image_rotate_right">Rotate Right</string>
    <string name="cropimage_storage_preparing">Preparing card</string>
    <string name="cropimage_storage_not_available">No storage card</string>
    <string name="cropimage_storage_no_space">Not enough space</string>
    <string name="app_description">MangoPlayer!</string>
    <string name="dialog_open_url_name">Title:</string>
    <string name="dialog_open_url">Stream URL:</string>
    <string name="dialog_open_url_group">Group:</string>
    <string name="dialog_add_samba_url_text">Samba URL:</string>
    <string name="dialog_add_samba_name_text">아이디:</string>
    <string name="dialog_add_samba_pwd_text">비밀번호:</string>
    <string name="dialog_add_http_url_text">Http URL:</string>
    <string name="dialog_add_ftp_url_text">Ftp URL:</string>
    <string name="dialog_button_back">Back</string>
    <string name="dialog_button_buy">Buy</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_add_samba_title">Samba 추가</string>
    <string name="preferences_title">설정</string>
    <string name="pref_key_play_continu">play_continu</string>
    <string name="pref_key_video_size">video_size</string>
    <string name="pref_key_micro_seek_duration">seek_duration</string>
    <string name="pref_key_decoder_choice">decoder_choice</string>
    <string name="pref_key_screen_ratio">screen_ratio</string>
    <string name="pref_key_brightness">brightness</string>
    <string name="pref_key_play_next">play_next</string>
    <string name="pref_key_sub_font">sub_font</string>
    <string name="pref_key_sub_size">sub_size</string>
    <string name="pref_key_sub_color">sub_color</string>
    <string name="pref_key_sub_shown">sub_shown</string>
    <string name="pref_key_sub_encoding">sub_encoding</string>
	<string name="pref_key_sub_position">sub_position</string>
    <string name="pref_key_sub_time">sub_time</string>
    <string name="video_original">100%</string>
    <string name="video_fit_screen">꽉차게</string>
    <string name="video_stretch">늘리기</string>
    <string name="video_crop">자유화면</string>
    <string name="video_screen_locked">화면 잠금</string>
    <string name="video_screen_unlocked">화면 해제</string>
    <string name="dialog_text_confirm_delete_folder">비디오 %d를 삭제하시겠습니까?</string>
    <string name="tune_screen_tab">화면</string>
    <string name="tune_touch_action">Touch action</string>
    <string name="tune_screen_size_title">화면 사이즈</string>
    <string name="tune_screen_ratio_title">화면 비율</string>
    <string name="tune_enable_brightness">Brightness</string>
    <string name="tune_subtitle_alignment">Alignment</string>
    <string name="tune_subtitle_alignment_prompt">Select subtitle position</string>
    <string name="tune_subtitle_typeface">글꼴</string>
    <string name="tune_subtitle_typeface_prompt">Text font</string>
    <string name="tune_subtitle_text_size">글자 크기</string>
    <string name="tune_subtitle_text_color">글자 색상</string>
    <string name="tune_subtitle_bold">굵게</string>
    <string name="tune_subtitle_bottom_padding">Bottom margins</string>
    <string name="tune_subtitle_background">Background</string>
    <string name="tune_subtitle_border_color">테두리</string>
    <string name="tune_subtitle_shadow">Shadow</string>
    <string name="tune_navigation_tab">Navigation</string>
    <string name="tune_navi_show_move_buttons">Forward/backward moving button</string>
    <string name="touch">Touch</string>
    <string name="cfg_tuner_subtitle_text">자막</string>
    <string name="cfg_tuner_subtitle_text_summary">Subtitle text settings: font, size, color, border, etc.</string>
    <string name="cfg_tuner_subtitle_layout">Layout</string>
    <string name="cfg_tuner_subtitle_layout_summary">Subtitle layout settings: alignment, padding, background color.</string>
    <string name="ssa_short">SSA</string>
    <string name="subtitle_fadeout_short">Fade out</string>
    <string name="fit_subtitle_overlay_to_video">Fit bitmap subtitles to the video area</string>
    <string name="ignore_ssa_fonts">Use default font</string>
    <string name="ssa_font_size">SSA scale</string>
    <string name="fullscreen">Full screen</string>
    <string name="elapsed_time">Elapsed time</string>
    <string name="status_text">Battery/clock</string>
    <string name="place_at_the_bottom">Place at the bottom</string>
	<string name="lock_mode">Lock mode</string>
	<string name="seek_position">Seek position</string>
	<string name="zoom">Video zoom</string>
	<string name="volume">Volume</string>
	<string name="interface_auto_hide_delay">"Interface auto hide delay"</string>
	<string name="lock_show_interface_on_touch">Show interface when locked screen is touched</string>
	<string name="tune_drag_tab">Gestures</string>
</resources>