<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:stretchColumns="1" android:shrinkColumns="1">
        <TableRow android:id="@id/touch_action_row" android:layout_marginTop="@dimen/tuner_vert_halfgap" android:layout_marginBottom="@dimen/tuner_vert_halfgap">
            <TextView android:textAppearance="?android:textAppearance" android:gravity="center_vertical" android:layout_height="fill_parent" android:text="@string/tune_touch_action" />
            <!--  <com.mxtech.widget.Spinner2 android:entries="@array/tune_touch_action_options" android:id="@id/touch_action" android:layout_marginLeft="8.0dip" android:prompt="@string/tune_touch_action" />-->
        </TableRow>
        <TableRow android:layout_marginTop="@dimen/tuner_vert_halfgap" android:layout_marginBottom="@dimen/tuner_vert_halfgap">
            <TextView android:textAppearance="?android:textAppearance" android:gravity="center_vertical" android:layout_height="fill_parent" android:text="@string/lock_mode" />
            <!-- <com.mxtech.widget.Spinner2 android:id="@id/lock_mode" android:layout_marginLeft="8.0dip" android:prompt="@string/lock_mode" />-->
        </TableRow>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="2.0dip" android:text="@string/tune_drag_tab" />
        <TableLayout android:background="@drawable/group_back" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:stretchColumns="*" android:shrinkColumns="*">
            <TableRow android:layout_marginTop="@dimen/tuner_vert_halfgap" android:layout_marginBottom="@dimen/tuner_vert_halfgap">
                <CheckBox android:id="@id/video_seeking" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/seek_position" />
                <CheckBox android:id="@id/zoom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zoom" />
            </TableRow>
            <TableRow android:layout_marginTop="@dimen/tuner_vert_halfgap" android:layout_marginBottom="@dimen/tuner_vert_halfgap">
                <CheckBox android:id="@id/volume" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/volume" />
                <CheckBox android:id="@id/brightness" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tune_enable_brightness" />
            </TableRow>
        </TableLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_marginTop="@dimen/tuner_vert_halfgap" android:layout_marginBottom="@dimen/tuner_vert_halfgap">
            <TextView android:textAppearance="?android:textAppearance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/interface_auto_hide_delay" />
            <SeekBar android:id="@id/interface_auto_hide_delay" android:paddingLeft="15.0dip" android:paddingTop="8.0dip" android:paddingRight="15.0dip" android:paddingBottom="8.0dip" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <TextView android:gravity="left|center" android:id="@id/interface_auto_hide_delay_text" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <CheckBox android:id="@id/lock_show_interface" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lock_show_interface_on_touch" />
    </TableLayout>
</ScrollView>
