<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
  	<item android:icon="@drawable/action_wifi" android:id="@id/menu_wifi" android:orderInCategory="0" android:title="@string/menu_wifi" android:showAsAction="ifRoom" />
  	<item android:icon="@drawable/action_wifi_search" android:id="@id/menu_search" android:orderInCategory="1" android:title="@string/menu_search" android:showAsAction="ifRoom" />
    <!-- <item android:icon="@drawable/action_open_url" android:id="@id/menu_open_url" android:orderInCategory="2" android:title="@string/menu_open_url" android:showAsAction="ifRoom" /> -->
    <item android:icon="@drawable/action_edit_light" android:id="@id/menu_edit" android:orderInCategory="3" android:title="@string/menu_edit" android:showAsAction="ifRoom" />
</menu>
