<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:background="@drawable/dialog_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/container" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false" android:weightSum="2.0">
            <LinearLayout android:orientation="horizontal" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tab_video_quality" style="@style/Text.Label" />
              <!--   <Spinner android:id="@id/spinner_video_quality" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:drawSelectorOnTop="true" android:prompt="@string/pref_tit_video_quality" /> -->
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:paddingLeft="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tab_video_aspect_ratio" style="@style/Text.Label" />
               <!--  <Spinner android:id="@id/spinner_aspect_ratio" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:drawSelectorOnTop="true" android:prompt="@string/pref_tit_aspect_ratio" /> -->
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0">
            <LinearLayout android:orientation="horizontal" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tab_video_orientation" style="@style/Text.Label" />
<!--                  <Spinner android:id="@id/spinner_orientation" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:drawSelectorOnTop="true" android:prompt="@string/pref_tit_orientation" />-->
            </LinearLayout>
            <View android:orientation="horizontal" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <CheckBox android:id="@id/checkbox_hw_decoder" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tab_video_hw_decoder" android:layout_weight="1.0" style="@style/Text.CheckBox" />
            <CheckBox android:id="@id/checkbox_deinterlace" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tab_video_deinterlace" android:layout_weight="1.0" style="@style/Text.CheckBox" />
            <CheckBox android:id="@id/checkbox_video_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tab_video_background" android:layout_weight="1.0" style="@style/Text.CheckBox" />
        </LinearLayout>
        <LinearLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tab_video_buffer_size" style="@style/Text.Label" />
            <SeekBar android:id="@id/seekbar_buffer_size" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
