<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:stretchColumns="1" android:shrinkColumns="1">
        <TableRow android:layout_marginTop="@dimen/tuner_vert_halfgap" android:layout_marginBottom="@dimen/tuner_vert_halfgap">
            <TextView android:textAppearance="?android:textAppearance" android:gravity="center_vertical" android:layout_height="fill_parent" android:text="@string/tune_subtitle_alignment" />
           <!--  <com.mxtech.widget.Spinner2 android:entries="@array/tune_subtitle_alignments" android:id="@id/subtitleAlignment" android:layout_marginLeft="8.0dip" android:prompt="@string/tune_subtitle_alignment_prompt" />-->
        </TableRow>
        <TableRow android:layout_marginTop="@dimen/tuner_vert_halfgap" android:layout_marginBottom="@dimen/tuner_vert_halfgap">
            <TextView android:textAppearance="?android:textAppearance" android:gravity="center_vertical" android:layout_height="fill_parent" android:text="@string/tune_subtitle_bottom_padding" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal">
                <SeekBar android:id="@id/subtitleBottomPadding" android:paddingLeft="15.0dip" android:paddingTop="8.0dip" android:paddingRight="15.0dip" android:paddingBottom="8.0dip" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_weight="1.0" />
                <TextView android:gravity="left|center" android:id="@id/subtitleBottomPaddingText" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
        </TableRow>
        <LinearLayout android:orientation="horizontal" android:layout_marginTop="@dimen/tuner_vert_halfgap" android:layout_marginBottom="@dimen/tuner_vert_halfgap">
            <CheckBox android:id="@id/subtitleBackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tune_subtitle_background" />
           <!--  <afzkl.development.mColorPicker.views.ColorPanelView android:id="@id/subtitleBackgroundColor" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="60.0dip" android:layout_height="fill_parent" android:layout_marginLeft="12.0dip" /> -->
        </LinearLayout>
        <CheckBox android:id="@id/fit_subtitle_overlay_to_video" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/tuner_vert_halfgap" android:text="@string/fit_subtitle_overlay_to_video" />
    </TableLayout>
</ScrollView>
