<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:stretchColumns="1" android:shrinkColumns="1">
        <TableRow android:layout_marginTop="@dimen/tuner_vert_halfgap" android:layout_marginBottom="@dimen/tuner_vert_halfgap">
            <TextView android:textAppearance="?android:textAppearance" android:gravity="center_vertical" android:layout_height="fill_parent" android:minWidth="60.0dip" android:text="@string/tune_subtitle_typeface" />
            <!-- <com.mxtech.widget.Spinner2 android:id="@id/subtitleTypeface" android:layout_marginLeft="8.0dip" android:prompt="@string/tune_subtitle_typeface_prompt" /> -->
            <com.example.bongplayer2.widget.Spinner2 android:entries="@array/font_titles" android:id="@id/orientation" android:layout_marginLeft="8.0dip" android:prompt="@string/tune_subtitle_typeface" />
        </TableRow>
        <TableRow android:layout_marginTop="@dimen/tuner_vert_halfgap" android:layout_marginBottom="@dimen/tuner_vert_halfgap">
            <TextView android:textAppearance="?android:textAppearance" android:gravity="center_vertical" android:layout_height="fill_parent" android:text="@string/tune_subtitle_text_size" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal">
                <SeekBar android:id="@id/subtitleTextSize" android:paddingLeft="15.0dip" android:paddingTop="8.0dip" android:paddingRight="15.0dip" android:paddingBottom="8.0dip" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginLeft="15.0dip" style="@style/Widget.ZI.SeekBar"/>
                <TextView android:gravity="left|center" android:id="@id/subtitleTextSizeText" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
        </TableRow>
        <TableRow android:layout_marginTop="@dimen/tuner_vert_halfgap" android:layout_marginBottom="@dimen/tuner_vert_halfgap">
            <TextView android:textAppearance="?android:textAppearance" android:gravity="center_vertical" android:layout_height="fill_parent" android:text="@string/tune_subtitle_text_color" />
            <LinearLayout android:orientation="horizontal">
                <com.example.bongplayer2.widget.ColorPanelView android:id="@id/subtitleTextColor" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="60.0dip" android:layout_height="fill_parent" android:layout_marginLeft="12.0dip" />
                <CheckBox android:id="@id/subtitleBold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:text="@string/tune_subtitle_bold" />
            </LinearLayout>
        </TableRow>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_marginTop="@dimen/tuner_vert_halfgap" android:layout_marginBottom="@dimen/tuner_vert_halfgap">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <CheckBox android:id="@id/subtitleBorder" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tune_subtitle_border_color" />
               <com.example.bongplayer2.widget.ColorPanelView android:id="@id/subtitleBorderColor" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="40.0dip" android:layout_height="fill_parent" android:layout_marginLeft="6.0dip" />
            </LinearLayout>
            <SeekBar android:id="@id/border_thickness" android:paddingLeft="15.0dip" android:paddingTop="8.0dip" android:paddingRight="15.0dip" android:paddingBottom="8.0dip" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_weight="1.0" style="@style/Widget.ZI.SeekBar"/>
            <TextView android:gravity="left|center" android:id="@id/border_thickness_text" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <TableRow android:layout_marginTop="@dimen/tuner_vert_halfgap" android:layout_marginBottom="@dimen/tuner_vert_halfgap">
            <TextView android:textAppearance="?android:textAppearance" android:gravity="center_vertical" android:layout_height="fill_parent" android:minWidth="60.0dip" android:text="@string/pref_tit_sub_encoding" />
            <!-- <com.mxtech.widget.Spinner2 android:id="@id/subtitleTypeface" android:layout_marginLeft="8.0dip" android:prompt="@string/tune_subtitle_typeface_prompt" /> -->
            <com.example.bongplayer2.widget.Spinner2 android:entries="@array/encoding_titles" android:id="@id/orientation" android:layout_marginLeft="8.0dip" android:prompt="@string/pref_tit_sub_encoding" />
        </TableRow>
        <!-- 
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_marginTop="@dimen/tuner_vert_halfgap" android:layout_marginBottom="@dimen/tuner_vert_halfgap">
            <CheckBox android:id="@id/subtitleShadow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tune_subtitle_shadow" android:layout_weight="1.0" />
            <CheckBox android:id="@id/subtitle_fadeout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/subtitle_fadeout_short" android:layout_weight="1.0" />
        </LinearLayout> -->
    </TableLayout>
</ScrollView>
